# pythondaq

./: arduino_device.py  basisscript.py  diode_experiment.py  eerste-meting.csv  eerste-meting.csv(1)  metingen.csv  metingen_0.csv  metingen_1.csv  metingen_2.csv  metingen_4.csv  metingen_5.csv  metingen_6.csv  metingen_7.csv  metingen_8.csv  metingen_9.csv  pyproject.toml  pythondaqMVC.bundle  test.csv  test.csv.csv  test.py  view.py
src/pythondaq/: arduino_device.py  cli.py  diode_experiment.py  gui.py  view.py
