[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = "Program to run an experiment on a LED through an arduino in order to get data about the U-I characteristics of the LED"
authors = ["Juaopteinde <juaopteinde@Outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.2"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
naam_commando = "package.module:naam_functie"
view = "pythondaq.view:main"
